<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myfirstproject</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Button">Submit</string>
    <string name="Name">Name</string>
    <string name="title_activity_checkbox_main">CheckboxMainActivity</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_toast">Toast</string>
    <string name="testmsg">Test Toast Message</string>
    <string name="title_activity_autocomplete">Autocomplete</string>
    <string name="Auto">Auto Complete example</string>
    <string name="AutoCompleteTextView"></string>
    <string name="title_activity_imagebuttontest">Imagebuttontest</string>
    <string name="android_launcher_image">android_launcher_image</string>
    <string name="imagebtnex">Image_Button</string>
    <string name="title_activity_togglebtn">Togglebtn</string>
    <string name="imgbtnn">button</string>
    <string name="example">Toggle button example</string>
    <string name="clickmebtn">Click Me</string>
    <string name="start_togglebtn">Start</string>
    <string name="stop_togglebtn">Stop</string>
    <string name="title_activity_radio_btn">RadioBtn</string>
    <string name="websiterdo0">www.tutorial.com</string>
    <string name="websiterdo1">www.compliteonline.com</string>
    <string name="websiterdo2">www.abc.com</string>
    <string name="websiteurl">Website URL</string>
    <string name="title_activity_radio_grp">RadioGrp</string>
    <string name="filmstar0">Fahad</string>
    <string name="filmstar1">Nivin</string>
    <string name="filmstar2">Dulker</string>
    <string name="writter3">M.T</string>
    <string name="writter4">Ulloor</string>
    <string name="writter5">Asaan</string>
    <string name="stars">Stars</string>
    <string name="writter">Writters</string>
    <string name="title_activity_linearlayout1">Linearlayout1</string>
    <string name="title_activity_linear">Linear</string>
    <string name="title_activity_eventhand1">Eventhand1</string>
    <string name="sbtn">Small Button</string>
    <string name="lbtn">Large Button</string>
    <string name="Halloworld">Hallo World</string>
    <string name="title_activity_event_hand2">EventHand2</string>
    <string name="SButton">SmallButton</string>
    <string name="LButton">LargeButton</string>
    <string name="title_activity_eventhand3">Eventhand3</string>
    <string name="buttons">Small Button</string>
    <string name="buttonl">Large Button</string>
    <string name="title_activity_ontouch1">Ontouch1</string>
    <string name="pressenter">Press Enter</string>
    <string name="Move">Move me</string>
    <string name="title_activity_linearlayoutss">Linearlayoutss</string>
    <string name="lnrbtn">Start</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="title_activity_tablelayoutss">Tablelayoutss</string>
    <string name="regform">Registration Form</string>
    <string name="name">Enter First Name</string>
    <string name="sname1">Enter Second Name</string>
    <string name="title_activity_absolutelayoutss">Absolutelayoutss</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_framelayoutss">Framelayoutss</string>
    <string name="image1">Image</string>
    <string name="frame">Frame Layout Demo</string>
    <string name="title_activity_gridviewlayoutss">Gridviewlayoutss</string>
    <string name="title_activity_listviews">Listviews</string>
    <string name="title_activity_student_registration">StudentRegistration</string>
    <string name="reg">Registration Form</string>
    <string name="rfname">First Name</string>
    <string name="rsname">Second Name</string>
    <string name="dob">DOB</string>
    <string name="sex">Sex</string>
    <string name="male1">Male</string>
    <string name="fem">Female</string>
    <!-- <string name="address">Address</string> -->
    <string name="Quali">Qualification</string>
    <string name="choosequali">Choose Qualification</string>
    <string name="city">City</string>
    <!--
     <string name="email">Email</string>
      <string_array name="qualification">
         <item>BA</item>
         <item>Bsc</item>
         <item>BCA</item>
         <item>BBA</item>
         <item>BTec</item>
         <item>MA</item>
         <item>Msc</item>
         <item>MCA</item>
         <item>MBA</item>
         <item>BA</item>
         <item>MTec</item>
         
     </string_array>
    -->

    <string name="title_activity_sample_reg_form">SampleRegForm</string>
    <string name="reg1">Registration Form</string>
    <string name="Rfname">First Name</string>
    <string name="Rlname">Last Name</string>
    <string name="Rdob">DOB</string>
    <string name="Rsex">Sex</string>
    <string name="Rmale">Male</string>
    <string name="Rfem">Female</string>
    <string name="Rquali">Qualification</string>
    <string name="Rchoosequali">Choose Qualification</string>
    <string name="Remail">Email</string>
    <string name="Rsubmit">Submit</string>
    <string name="title_activity_arithmatic_spinner">ArithmaticSpinner</string>
    <string name="enternum">Enter Number1</string>
    <string name="entersnum">Enter Number2</string>
    <string name="OK">OK</string>
    <string name="title_activity_spinnerexample">Spinnerexample</string>
    <string name="title_activity_example_active">ExampleActive</string>
    <string name="title_activity_scrolllist">Scrolllist</string>
    <string name="title_activity_scrollfood_list">ScrollfoodList</string>
    <string name="title_activity_alertdialoge">Alertdialoge</string>
    <string name="title_activity_progressbar">Progressbar</string>
    <string name="download">Download File</string>
    <string name="title_activity_services_example">ServicesExample</string>
    <string name="servcstart">Start</string>
    <string name="servcstop">Stop</string>
    <string name="servcnext">Next</string>
    <string name="title_activity_student_details">StudentDetails</string>
    <string name="dbname">Student Name</string>
    <string name="dbgrade">Grade</string>
    <string name="insert">Insert</string>
    <string name="retrive1">Retrieve</string>
    <string name="title_activity_db__product">Db_ProductActivity</string>
    <string name="id">Id</string>
    <string name="product">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="retrive">Retrive</string>
    <string name="title_activity_product_intent">ProductIntentActivity</string>
    <string name="title_activity_intentproduct_main">IntentproductMainActivity</string>
    <string name="title_activity_tab_main">TabMainActivity</string>
    <string name="title_activity_song_tab_main">SongTabMainActivity</string>
    <string name="title_activity_vedio_tab_main">VedioTabMainActivity</string>
    <string name="title_activity_photo_tab_main">PhotoTabMainActivity</string>
    <string name="photo">Photo Here</string>
    <string name="vedio">Vedio Here</string>
    <string name="song">songs Here</string>
    <string name="title_activity_contact_main">ContactMainActivity</string>
    <string name="title_activity_popup_menu">PopupMenuActivity</string>
    <string name="india">India</string>
    <string name="china">China</string>
    <string name="japan">japan</string>
    <string name="title_activity_option_menu1">OptionMenu1Activity</string>
    <string name="optionmenu">Option Menu</string>
    <string name="home">Home</string>
    <string name="galary">Galary</string>
    <string name="contactus">Contact Us</string>
    <string name="search">Search</string>
    <string name="mail">mail</string>
    <string name="title_activity_my_fragments">MyFragmentsActivity</string>
    <string name="portrait">Portrait</string>
    <string name="land">Landscape</string>
    <string name="title_activity_tab_fragment">TabFragmentActivity</string>
    <string name="title_activity_broadcast_intent">BroadcastIntentActivity</string>
    <string name="title_activity_intent_demo">IntentDemoActivity</string>
    <string name="title_activity_custom_intent">CustomIntentActivity</string>
    <string name="starta">Start Browser with VIEW action</string>
    <string name="startb">Start Browser with LAUNCH action</string>
    <string name="startc">EXception Condition</string>
    <string name="title_activity_sliddingdrawer">SliddingdrawerActivity</string>
    <string name="title_activity_drag_ndrop">DragNDropActivity</string>
    <string name="title_activity_sendemaildemo">SendemaildemoActivity</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="title_activity_notification_view">NotificationView</string>
    <string name="title_activity_thread_main">ThreadMainActivity</string>
    <string name="title_activity_thread1">Thread1Activity</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_json_parser">JSonParserActivity</string>
    <string name="title_activity_media_player">MediaPlayerActivity</string>

</resources>
