<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Eventhand1" >

 
    

    <Button
        android:id="@+id/smallbtn"
        style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:text="@string/sbtn" />

    <Button
        android:id="@+id/largebtn"
         style="@style/CustomButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/smallbtn"
        android:layout_alignBottom="@+id/smallbtn"
        android:layout_toRightOf="@+id/smallbtn"
        android:text="@string/lbtn" />

    <TextView
        android:id="@+id/txtHallo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/largebtn"
        android:layout_below="@+id/smallbtn"
        android:layout_marginRight="72dp"
        android:layout_marginTop="78dp"
        android:text="@string/Halloworld"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtHallo"
        android:layout_centerVertical="true"
        android:text="@string/pressenter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>