<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EventHand2" >

    <TextView
        android:id="@+id/txtview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="187dp"
        android:layout_marginLeft="96dp"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/smallbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:text="@string/SButton" />

    <Button
        android:id="@+id/largebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/smallbutton"
        android:layout_alignBottom="@+id/smallbutton"
        android:layout_alignLeft="@+id/txtview1"
        android:layout_marginLeft="46dp"
        android:text="@string/LButton" />

</RelativeLayout>