
          <TableLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
           

            <TextView
                android:id="@+id/txtArith1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enternum"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtnum1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
            </TableRow>
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txtArith2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entersnum"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <EditText
                    android:id="@+id/edtnum2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
                
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/spinner2"
                   
                    android:spinnerMode="dropdown" />
                 <EditText
                    android:id="@+id/edtResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
                

            </TableRow>
          <TableRow>
               <Button
		               android:id="@+id/btnok"
		               android:layout_width="wrap_content"
		               android:layout_height="wrap_content"
		               android:text="@string/OK" />
             </TableRow>
           
        </TableLayout>
        
       
